--- a/style.css
+++ b/style.css
@@ -4,9 +4,13 @@
 
 .color {
     border: 1px solid black;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     display: inline-block;
+}
+
+.blackBox {
+    background-color: black;
 }
 
 .redBox {
@@ -21,6 +25,11 @@
     background-color: blue;
 }
 
-.purpleBox {
-    background-color: purple;
+.pixel {
+    border: 1px solid black;
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    padding: 0;
+    background-color: white;
 }
