--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 .color {
@@ -19,6 +20,7 @@
     background-color: white;
 }
 
-.selected {
-
-}
+/* #pixel-board {
+    margin: 25px 0px;
+    font-size: 0;
+} */
